# Plant_Disease_sol

./: .gitignore  README.md  [Baseline]_ResNet50 + LSTM.ipynb  [Baseline]_ResNet50 + LSTM1.ipynb  baseline_submission.csv  efficient + LSTM_valerror.ipynb  gradio_interface.py  last_submission.csv  pyproject.toml  requirements.txt  test.py  train.py
fonts/: NanumGothic-Regular.ttf:Zone.Identifier
project/farm/: gradio_interface.py  test.py  train.py
project/farm/src/: dataset.py  models.py  utils.py
src/: dataset.py  models.py  utils.py
